--- a/optim.ipynb
+++ b/optim.ipynb
@@ -70,10 +70,16 @@
     "\n",
     "* Applicable to functions defined on an interval of the real line.\n",
     "\n",
-    "* Assumption: $f$ is continuous and *unimodal* on the interval\n",
-    "\n",
+    "* Assumption: $f$ is continuous and *strictly unimodal* on the interval\n",
+    "\\\n",
     "<img src=\"images/unimodal.png\" width=\"600\" align=\"center\"/>\n",
     "\n",
+    "    A function $f: [a,b] \\to \\mathbb{R}$ is strictly unimodal if \n",
+    "    $$\n",
+    "    f(\\lambda x + (1-\\lambda) y) < \\max\\{ f(x), f(y) \\},\n",
+    "    \\quad\n",
+    "    x, y \\in [a, b],~x\\neq y, ~\\lambda \\in (0, 1).\n",
+    "    $$\n",
     "\n",
     "* Idea: keep track of three points $a < x_1 < b$ such that $f(x_1) < \\min\\{f(a), f(b)\\}$\n",
     "\n",
@@ -81,8 +87,11 @@
     "\n",
     "* WLOG, suppose $a < x_0 < x_1$.\n",
     "    - If $f(x_0) > f(x_1)$, then the minimum lies in the interval $(x_0, b)$. Hence set $(a, x_1, b) := (x_0, x_1, b)$.\n",
-    "    - If $f(x_0) < f(x_1)$, then the minimum lies in the interval $(a, x_1)$. Hence set $(a, x_1, b) := (a, x_0, x_1)$.\n",
+    "    - Otherwise, the minimum lies in the interval $(a, x_1)$. Hence set $(a, x_1, b) := (a, x_0, x_1)$.        \n",
+    "<!--    \n",
+    "    - If $f(x_0) < f(x_1)$, then the minimum lies in the interval $(a, x_1)$. Hence set $(a, x_1, b) := (a, x_0, x_1)$.    \n",
     "    - If $f(x_0) = f(x_1)$, then set $(a, x_1, b) := (x_0, x_1, b)$ if $f(b) < f(a)$, and set $(a, x_1, b) := (a, x_0, x_1)$ otherwise.\n",
+    "-->\n",
     "    \n",
     "<img src=\"images/goldensection.png\" width=\"500\" align=\"center\"/>\n",
     "\n",
@@ -108,7 +117,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -122,17 +132,17 @@
     "        print(c(a, x1, b))\n",
     "        if ( f(x0) > f(x1) ) {\n",
     "            a <- x0\n",
-    "        } else if ( f(x0) < f(x1) ) {\n",
+    "        } else { # if ( f(x0) < f(x1) ) {\n",
     "            b <- x1\n",
     "            x1 <- x0\n",
-    "        } else {\n",
-    "            if ( f(b) < f(a) ) {\n",
-    "                a <- x0\n",
-    "            } else {\n",
-    "                b <- x1\n",
-    "                x1 <- x0                \n",
-    "            }\n",
-    "        }\n",
+    "        } #else {\n",
+    "          #  if ( f(b) < f(a) ) {\n",
+    "          #      a <- x0\n",
+    "          #  } else {\n",
+    "          #      b <- x1\n",
+    "          #      x1 <- x0                \n",
+    "          #  }\n",
+    "        #}\n",
     "        iter <- iter + 1\n",
     "    }\n",
     "    ret <- list(val = (a + b) / 2, iter = iter)\n",
@@ -146,7 +156,8 @@
     "collapsed": true,
     "jupyter": {
      "outputs_hidden": true
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
